--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>纯HTML5+CSS3实现一棵自己跳舞的树</title>
+	<title>资源库</title>
 	<link rel="stylesheet" href="css/lanren.css">
 </head>
 <body>
