--- a/ln2019/index.html
+++ b/ln2019/index.html
@@ -49,11 +49,11 @@
     </div>
     <script> 
         function loadIos(){ 
-            window.location.href = "itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=https://yinqf.gitee.io/wohutong/ln2019/callapp-1.1.36.plist";
+            window.location.href = "itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/ln2019/callapp-1.1.36.plist";
         }
   
         function loadAndroid(){
-            window.location.href = "https://yinqf.gitee.io/wohutong/ln2019/callapp-1.1.36.apk";
+            window.location.href = "https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/ln2019/callapp-1.1.36.apk";
         }
 
     </script>
