--- a/tj2/index.html
+++ b/tj2/index.html
@@ -49,11 +49,11 @@
     </div>
     <script> 
         function loadIos(){ 
-            window.location.href = "itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=https://yinqf.gitee.io/wohutong/tj2/callapp-1.1.30.plist";
+            window.location.href = "itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/tj2/callapp-1.1.30.plist";
         }
   
         function loadAndroid(){
-            window.location.href = "https://yinqf.gitee.io/wohutong/tj2/callapp-1.1.30.apk";
+            window.location.href = "https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/tj2/callapp-1.1.30.apk";
         }
 
     </script>
