--- a/zj/index.html
+++ b/zj/index.html
@@ -12,16 +12,16 @@
     <link href="./css/style.css" rel="Stylesheet" type="text/css">
 </head>
 <body>
-    <div class="header layout"><img src="./img/icon（1024x1024）.png"><span class="logo_text">沃呼通</span></div>
+    <div class="header layout"><img src="./img/icon（1024x1024）.png"><span class="logo_text">浙里呼</span></div>
     <div class="container-1">
         <div class="title"><div class="line">客户端下载</div></div>
         <div class="contentpane">
             <div class="download">
                 <div class="dow_title">Android客户端</div>
                 <div class="dow_left">
-                    <div class="">日期：2020-07-06</div>
+                    <div class="">日期：2020-07-31</div>
                     <div class="">大小：15.1 MB</div>
-                    <div class="">版本：1.2.3</div>
+                    <div class="">版本：1.2.4</div>
                 </div>
                 <div class="dow_right">
                     <a href="javascript:void(0)" class="btn_download" onclick="loadAndroid();">
@@ -32,9 +32,9 @@
             <div class="download">
                 <div class="dow_title">IOS客户端</div>
                 <div class="dow_left">
-                    <div class="">日期：2020-07-06</div>
+                    <div class="">日期：2020-07-31</div>
                     <div class="">大小：8.1 MB</div>
-                    <div class="">版本：1.2.3</div>
+                    <div class="">版本：1.2.4</div>
                 </div>
                 <div class="dow_right">
                     <a href="javascript:void(0)" class="btn_download" onclick="loadIos();">
@@ -48,12 +48,12 @@
         Copyright © 2013-2019
     </div>
     <script> 
-        function loadIos(){ 
-            window.location.href = "itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/zj/callapp-1.2.3.plist";
+        function loadIos(){
+            window.location.href = "itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/zj/callapp-1.2.4.plist";
         }
   
         function loadAndroid(){
-            window.location.href = "https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/zj/callapp-1.2.3.apk";
+            window.location.href = "https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/zj/callapp-1.2.4.apk";
         }
 
     </script>
