--- a/sx01/index.html
+++ b/sx01/index.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="download">
-                <div class="dow_title">IOS客户端</div>
+                <div class="dow_title">IOS客户端(请用手机自带safari浏览器打开链接下载安装)</div>
                 <div class="dow_left">
                     <div class="">日期：2021-02-25</div>
                     <div class="">大小：8.1 MB</div>
@@ -48,7 +48,7 @@
         Copyright © 2013-2019
     </div>
     <script> 
-        function loadIos(){ 
+        function loadIos(){
             window.location.href = "itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/sx01/callapp-1.4.0.plist";
         }
   
