--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
     <div id="app"></div>
   </body>
   <script src="https://open.work.weixin.qq.com/wwopen/js/jwxwork-1.0.0.js"></script>
-  <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+  <script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
   <script >
     $(function(){
         $.ajax({url:"http://127.0.0.1:8080/cpTest/getJsToken",success:function(result){
