--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
               timestamp: result.timestamp, // 必填，生成签名的时间戳
               nonceStr: result.nonceStr, // 必填，生成签名的随机串
               signature: result.signature,// 必填，签名，见附录-JS-SDK使用权限签名算法
-              jsApiList: ['selectExternalContact'], //必填，传入需要使用的接口名称
+              jsApiList: ['shareToExternalContact'], //必填，传入需要使用的接口名称
             });
 
             wx.agentConfig({
@@ -29,7 +29,7 @@
               timestamp: result.timestamp, // 必填，生成签名的时间戳
               nonceStr: result.nonceStr, // 必填，生成签名的随机串
               signature: result.signature,// 必填，签名，见附录-JS-SDK使用权限签名算法
-              jsApiList: ['selectExternalContact'], //必填，传入需要使用的接口名称
+              jsApiList: ['shareToExternalContact'], //必填，传入需要使用的接口名称
               success: function(res) {
                   console.log(res);
               },
