--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
         $.ajax({url:"http://127.0.0.1:8080/cpTest/getJsToken",success:function(result){
             console.log({
               corpid: result.appId, // 必填，企业微信的corpid，必须与当前登录的企业一致
-              agentid: 1000003, // 必填，企业微信的应用id （e.g. 1000247）
+              agentid: 0, // 必填，企业微信的应用id （e.g. 1000247）
               timestamp: result.timestamp, // 必填，生成签名的时间戳
               nonceStr: result.nonceStr, // 必填，生成签名的随机串
               signature: result.signature,// 必填，签名，见附录-JS-SDK使用权限签名算法
@@ -25,7 +25,7 @@
 
             wx.agentConfig({
               corpid: result.appId, // 必填，企业微信的corpid，必须与当前登录的企业一致
-              agentid: 1000003, // 必填，企业微信的应用id （e.g. 1000247）
+              agentid: 0, // 必填，企业微信的应用id （e.g. 1000247）
               timestamp: result.timestamp, // 必填，生成签名的时间戳
               nonceStr: result.nonceStr, // 必填，生成签名的随机串
               signature: result.signature,// 必填，签名，见附录-JS-SDK使用权限签名算法
