--- a/test.html
+++ b/test.html
@@ -34,6 +34,7 @@
                   console.log(res);
               },
               fail: function(res) {
+                $("#app").html(JSON.stringify(res));
                   console.log(res);
               }
           });
