--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
   <script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
   <script >
     $(function(){
-        $.ajax({url:"http://172.20.10.2:8080/cpTest/getJsToken",success:function(result){
+        $.ajax({url:"https://frp.yinqf.com//cpTest/getJsToken",success:function(result){
             console.log({
               corpid: result.appId, // 必填，企业微信的corpid，必须与当前登录的企业一致
               agentid: 0, // 必填，企业微信的应用id （e.g. 1000247）
