--- a/test.html
+++ b/test.html
@@ -10,6 +10,7 @@
     <div id="app"></div>
     <button id="send">群发</button>
   </body>
+  <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
   <script src="https://open.work.weixin.qq.com/wwopen/js/jwxwork-1.0.0.js"></script>
   <script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
   <script >
@@ -17,7 +18,7 @@
         $.ajax({url:"https://frp.yinqf.com//cpTest/getJsToken",success:function(result){
             console.log({
               corpid: result.appId, // 必填，企业微信的corpid，必须与当前登录的企业一致
-              agentid: 0, // 必填，企业微信的应用id （e.g. 1000247）
+              agentid: 1000003, // 必填，企业微信的应用id （e.g. 1000247）
               timestamp: result.timestamp, // 必填，生成签名的时间戳
               nonceStr: result.nonceStr, // 必填，生成签名的随机串
               signature: result.signature,// 必填，签名，见附录-JS-SDK使用权限签名算法
@@ -26,7 +27,7 @@
 
             wx.agentConfig({
               corpid: result.appId, // 必填，企业微信的corpid，必须与当前登录的企业一致
-              agentid: 0, // 必填，企业微信的应用id （e.g. 1000247）
+              agentid: 1000003, // 必填，企业微信的应用id （e.g. 1000247）
               timestamp: result.timestamp, // 必填，生成签名的时间戳
               nonceStr: result.nonceStr, // 必填，生成签名的随机串
               signature: result.signature,// 必填，签名，见附录-JS-SDK使用权限签名算法
