--- a/tj2/index.html
+++ b/tj2/index.html
@@ -29,7 +29,7 @@
                     </a>
                 </div>
             </div>
-            <div class="download">
+            <!-- <div class="download">
                 <div class="dow_title">IOS客户端</div>
                 <div class="dow_left">
                     <div class="">日期：2022-01-27</div>
@@ -41,7 +41,7 @@
                         <img src="./img/icon_ios.png">IOS版
                     </a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <div class="footer layout">
