--- a/znzs/index.html
+++ b/znzs/index.html
@@ -19,9 +19,9 @@
             <div class="download">
                 <div class="dow_title">Android客户端</div>
                 <div class="dow_left">
-                    <div class="">日期：2020-04-02</div>
+                    <div class="">日期：2024-07-04</div>
                     <div class="">大小：15.1 MB</div>
-                    <div class="">版本：1.1.34</div>
+                    <div class="">版本：1.0.3</div>
                 </div>
                 <div class="dow_right">
                     <a href="javascript:void(0)" class="btn_download" onclick="loadAndroid();">
@@ -34,7 +34,7 @@
                 <div class="dow_left">
                     <div class="">日期：2024-07-04</div>
                     <div class="">大小：8.1 MB</div>
-                    <div class="">版本：1.0.0</div>
+                    <div class="">版本：1.0.3</div>
                 </div>
                 <div class="dow_right">
                     <a href="javascript:void(0)" class="btn_download" onclick="loadIos();">
@@ -45,15 +45,15 @@
         </div>
     </div>
     <div class="footer layout">
-        Copyright © 2013-2020
+        Copyright © 2013-2024
     </div>
     <script> 
         function loadIos(){ 
-            window.location.href = "itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/znzs/znzs-1.0.0.plist";
+            window.location.href = "itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/znzs/znzs-1.0.3.plist";
         }
   
         function loadAndroid(){
-            window.location.href = "https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/nxlt/callapp-1.1.34.apk";
+            window.location.href = "http://hollycas.oss-cn-beijing.aliyuncs.com/app_package/znzs/znzs-1.0.3.apk";
         }
 
     </script>
