--- a/znzs/index.html
+++ b/znzs/index.html
@@ -53,7 +53,7 @@
         }
   
         function loadAndroid(){
-            window.location.href = "http://hollycas.oss-cn-beijing.aliyuncs.com/app_package/znzs/znzs-1.0.3.apk";
+            window.location.href = "https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/znzs/znzs-1.0.3.apk";
         }
 
     </script>
