--- a/znzs/index.html
+++ b/znzs/index.html
@@ -12,7 +12,7 @@
     <link href="./css/style.css" rel="Stylesheet" type="text/css">
 </head>
 <body>
-    <div class="header layout"><img src="./img/icon（1024x1024）.png"><span class="logo_text">智能助手</span></div>
+    <div class="header layout"><img src="./img/icon（1024x1024）.png"><span class="logo_text">智家助手</span></div>
     <div class="container-1">
         <div class="title"><div class="line">客户端下载</div></div>
         <div class="contentpane">
