--- a/znzs/index.html
+++ b/znzs/index.html
@@ -49,7 +49,7 @@
     </div>
     <script> 
         function loadIos(){ 
-            window.location.href = "itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=https://www.nxlt10010.com/nx/O0Ot";
+            window.location.href = "itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=https://app.liuyingyong.cn/build/download/488119a0-635d-11ef-9c75-67f5e1d06564";
         }
   
         function loadAndroid(){
