--- a/znzs/index.html
+++ b/znzs/index.html
@@ -49,7 +49,7 @@
     </div>
     <script> 
         function loadIos(){ 
-            window.location.href = "itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=https://mp-049f9dc7-8885-4784-b1f8-7f70f7e00e42.cdn.bspapp.com/cloudstorage/__UNI__FBE8C5D_20240827101823.ipa";
+            window.location.href = "itms-services://?action=download-manifest&url=https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/znzs/znzs-1.1.0.plist";
         }
   
         function loadAndroid(){
