--- a/znzs/index.html
+++ b/znzs/index.html
@@ -49,11 +49,11 @@
     </div>
     <script> 
         function loadIos(){ 
-            window.location.href = "itms-services://?action=download-manifest&url=https://mp-049f9dc7-8885-4784-b1f8-7f70f7e00e42.cdn.bspapp.com/install_1.plist";
+            window.location.href = "itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=https://env-00jxh6j15lc5.normal.cloudstatic.cn/install_1.plist";
         }
   
         function loadAndroid(){
-            window.location.href = "https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/znzs/zjzs-1.1.0.apk";
+            window.location.href = "https://env-00jxh6j15lc5.normal.cloudstatic.cn/zjzs-1.1.1.apk";
         }
 
     </script>
