--- a/znzs/index.html
+++ b/znzs/index.html
@@ -53,7 +53,7 @@
         }
   
         function loadAndroid(){
-            window.location.href = "https://env-00jxh6j15lc5.normal.cloudstatic.cn/zjzs-1.1.1.apk";
+            window.location.href = "http://123.138.11.213:9101/zjzs-1.1.1.apk";
         }
 
     </script>
