--- a/znzs/index.html
+++ b/znzs/index.html
@@ -49,7 +49,7 @@
     </div>
     <script> 
         function loadIos(){ 
-            window.location.href = "itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=https://env-00jxh6j15lc5.normal.cloudstatic.cn/install_1.plist";
+            window.location.href = "itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=https://env-00jxhoob9pn5.normal.cloudstatic.cn/install_1.plist";
         }
   
         function loadAndroid(){
